--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="wrapper">
     <div class="search__block">
       <h1>Browse Movies</h1>
-      <form class="search__form" role="search" onchange="onSearchSubmit(event)">
+      <form class="search__form" role="search" onsubmit="onSearchSubmit(event)">
           <input type="text" id="search__input" placeholder="Search movies..." class="search__movie">
           <button class="btn" type="submit" id="search__button">
             <i class="fas fa-search fa-2x"></i>
